<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoteTaker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">"Title: "</string>
    <string name="date">Date: </string>
    <string name="note">Note:</string>
    <string name="save">Save</string>
    <string name="title_activity_list_notes">NoteTaker</string>
    <string name="add_note">Add Note</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deleteAlertDialogMessage">Are you sure you want to delete this note? It can\'t be undone!</string>
    <string name="deleteAlertDialogTitle">Confirm Delete</string>
    <string name="deleteAlertDialogDeleteButton">Delete</string>
    <string name="deleteAlertDialogCancelButton">Cancel</string>
    <string name="saveButtonEdit">Edit</string>
    <string name="saveButtonSave">Save</string>
    <string name="cntnotes">cntNotes</string>
    <string name="noteTitle">Title</string>
    <string name="notAvailable">N/A</string>
    <string name="noteDate">Date</string>
    <string name="noteContent">Content</string>

</resources>
